<resources>
    <string name="app_name">ProductShopping</string>
    <string name="api_key">b5f18e70</string>
    <string name="tv_detail">details</string>
    <string name="tv_price">%1$.2f %2$s</string>
    <string name="tv_reviewCount">(%1$d)</string>
    <string name="dialog_quantity_title">Qty: </string>
    <string name="about_product">About the Product: </string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_list">Products</string>
    <string name="product_detail">Product Details</string>
    <string name="product_cart">Shopping Cart</string>

    <string name="cart_title">Check Out</string>
    <string name="cart_ordered_products">Your Products: </string>
    <string name="cart_your_order">Your Order </string>
    <string name="cart_delivery_address">Delivery Address: </string>
    <string name="cart_delivery_address_new">New Address</string>
    <string name="cart_order">Order Now</string>
    <string name="cart_no_address_available">No Address available</string>
    <string name="cart_no_address_chosen">No Address chosen</string>
    <string name="cart_address_chosen">Chose: \n %1$s %2$s \n %3$s %4$s \n %5$s %6$s</string>
    <string name="cart_no_products_in_cart">No Products in your cart.</string>
    <string name="cart_order_successfull">Order successful.</string>
    <string name="cart_added_product">Product added to cart</string>
    <string name="cart_quantity_max">Can\t add Product to cart, reached max Stock</string>


    <string name="cart_item_list_quantity">Quantity: %1$d</string>
    <string name="cart_item_list_total">Total: %1$.2f %2$s</string>
    <string name="cart_item_list_delivery_date">Est. Delivery: </string>


    <string name="mail_text_body">
        <p>Thank you for ordering, \n</p>
        <p>below your orders are listed: \n</p>

    </string>

</resources>
