<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_cardview"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="8dp"
    android:background="@color/colorPrimary"
    android:padding="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_product_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textStyle="bold"
                tools:text="PRODUCT NAME" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_total_amount"
                android:layout_below="@+id/tv_product_name"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="@string/cart_item_list_quantity" />


            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:textColor="@color/red1"
                android:textSize="18sp"
                tools:text="@string/cart_item_list_total" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                tools:text="05.08.1988" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_above="@id/tv_date"
                tools:text="@string/cart_item_list_delivery_date" />

        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>